--- a/_posts/CTF-writeups/2023/2023_BackdoorCTF/2023-12-18-php_sucks.md
+++ b/_posts/CTF-writeups/2023/2023_BackdoorCTF/2023-12-18-php_sucks.md
@@ -3,7 +3,7 @@ title: 2023 BackdoorCTF - php_sucks
 author: thanguyen165
 date: 2023-12-18 00:00:00 +0700
 categories: [Write-ups, 2023_BackdoorCTF]
-tags: [Web Exploitation, write-ups]
+tags: [Web Exploitation, File upload vulnerabilities]
 ---
 
 * 124 solves / 419 points
@@ -166,7 +166,7 @@ function generateHashedDirectory($userName)
 
 This challenge allows users to upload an image. But we do not want to upload an image only, right?
 
-After the file is uploaded, it must passed several conditions before written into a disk:
+After the file is uploaded, it must pass several conditions before being written to a disk:
 
 - Check [path info](https://www.php.net/manual/en/function.pathinfo.php)
 
@@ -221,7 +221,7 @@ if (move_uploaded_file($fileTmpName, $uploadDir . $fileName)) {
 
 The php script can be injected into a normal image and uploaded. The file's content is not checked whether it contains php code.
 
-The weird line ```$fileName = strtok($fileName, chr(7841151584512418084));``` make it easier to upload php code! ```chr(7841151584512418084)``` is ```$```, so if a file named ```a.php$.jpg``` is uploaded, it will be named ```a.php```.
+The weird line ```$fileName = strtok($fileName, chr(7841151584512418084));``` makes it easier to upload php code! ```chr(7841151584512418084)``` is ```$```, so if a file named ```a.php$.jpg``` is uploaded, it will be named ```a.php```.
 
 ## Exploitation
 
