--- a/_posts/CTF-writeups/2024/2024_LACTF/2024-02-18-flaglang.md
+++ b/_posts/CTF-writeups/2024/2024_LACTF/2024-02-18-flaglang.md
@@ -3,7 +3,7 @@ title: 2024 LACTF - flaglang
 author: thanguyen165
 date: 2024-02-18 00:00:00 +0700
 categories: [Write-ups, 2024_LACTF]
-tags: [Web Exploitation, write-ups]
+tags: [Web Exploitation]
 img_path: /assets/img/posts_images/CTF-writeups/2024/2024_LACTF/
 ---
 
